# gtasamobile-source-code

./: CMakeLists.txt  README.md  gtasa.hpp
CGame/: C3DMarkers.cpp  C3DMarkers.h  CBone.h  CBuilding.cpp  CBuilding.h  CBulletTrace.h  CCam.cpp  CCam.h  CCamera.cpp  CCamera.h  CEntity.cpp  CEntity.h  CFxManager.cpp  CFxManager.h  CHAnimIFrame.h  CMenuManager.cpp  CMenuManager.h  CModel.cpp  CModel.h  CObject.cpp  CObject.h  CPad.cpp  CPad.h  CParticleData.h  CPed.cpp  CPed.h  CPedIK.h  CPedIntelligence.h  CPhysical.cpp  CPhysical.h  CPlaceable.cpp  CPlaceable.h  CSurface.cpp  CSurface.h  CTxdStore.cpp  CTxdStore.h  CVehicle.cpp  CVehicle.h  CWeapon.cpp  CWeapon.h  (+8 more)
CGame/Pools/: CEntityPool.h  CIntelligencePool.h  CObjectPool.cpp  CObjectPool.h  CPedPool.cpp  CPedPool.h  CPhysicalPool.h  CPlaceablePool.h  CPool.h  CVehiclePool.cpp  CVehiclePool.h
CGame/Transport/: CAutomobile.cpp  CAutomobile.h  CBike.cpp  CBike.h  CBmx.h  CBoat.h  CHandlingDataMgr.cpp  CHandlingDataMgr.h  CHeli.h  CMonsterTruck.h  CPlane.h  CQuad.h  CTrailer.h
